fix text-gradient bug on safari

--- a/src/styles/game.scss
+++ b/src/styles/game.scss
@@ -142,4 +142,8 @@
     top: 0.7rem;
     transform: rotate(-7deg);
   }
+  .btn {
+    width: 100%;
+    height: 100%;
+  }
 }
