--- a/src/styles/ui.scss
+++ b/src/styles/ui.scss
@@ -31,16 +31,14 @@
   }
 
   &-title {
-    height: 2.6rem;
+    min-height: 2.6rem;
     font-size: 1.8rem;
     display: flex;
     align-items: baseline;
     justify-content: center;
-    margin-top: 0.5rem;
-    color: $orange;
     font-weight: 700;
     letter-spacing: 0.1rem;
-    @include text-gradient;
+    line-height: 1.7;
     > img {
       width: 2rem;
       margin-right: 0.6rem;
@@ -142,7 +140,6 @@
   }
 
   .label {
-    @include text-gradient;
     font-size: 1rem;
     font-weight: 700;
     padding-bottom: 0.3rem;
